# CodeScaleBench

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LEADERBOARD_RESULTS.md  README.md  ds  leaderboard.json  prd.json  progress.txt  selected_benchmark_tasks.json
_archived/benchmarks_dibench/: QUICKSTART.md  README.md  VALIDATORS.md  adapter.py  generate_registry.py  parity_experiments.json  pyproject.toml
_archived/benchmarks_dibench/templates/tests/: test.sh
_archived/benchmarks_dibench/tests/: test_integration.py
benchmarks/ccb_build/similar-asserts-deps-install-001/environment/repo/: Cargo.toml
benchmarks/locobench_agent/tasks/c_api_graphql_expert_079_architectural_understanding_expert_01/environment/project/libs/sc_common/: CMakeLists.txt
benchmarks/locobench_agent/tasks/c_api_graphql_expert_079_architectural_understanding_expert_01/environment/project/services/audio-service/: CMakeLists.txt  Dockerfile  README.md
benchmarks/locobench_agent/tasks/c_api_graphql_expert_079_cross_file_refactoring_expert_01/environment/project/: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/locobench_agent/tasks/c_api_graphql_expert_079_cross_file_refactoring_expert_01/environment/project/api-gateway/: CMakeLists.txt
benchmarks/locobench_agent/tasks/c_api_graphql_expert_079_cross_file_refactoring_expert_01/environment/project/scripts/: build.sh
benchmarks/locobench_agent/tasks/c_blockchain_nft_expert_071_cross_file_refactoring_expert_01/environment/project/shared/: CMakeLists.txt
benchmarks/locobench_agent/tasks/c_ml_nlp_expert_017_architectural_understanding_expert_01/environment/project/: CMakeLists.txt  Doxyfile  LICENSE  README.md
benchmarks/locobench_agent/tasks/c_ml_nlp_expert_017_architectural_understanding_expert_01/environment/project/config/: database.conf  lexilearn.conf
benchmarks/locobench_agent/tasks/c_ml_nlp_expert_017_architectural_understanding_expert_01/environment/project/docs/: api_reference.md  architecture.md  contributing.md  ml_pipeline_overview.md  setup_guide.md
benchmarks/locobench_agent/tasks/c_ml_nlp_expert_017_architectural_understanding_expert_01/environment/project/scripts/: generate_docs.sh  run_orchestrator.sh  run_tests.sh  run_view_server.sh  setup.sh
benchmarks/locobench_agent/tasks/c_ml_nlp_expert_017_architectural_understanding_expert_01/environment/project/src/: main.c
benchmarks/locobench_agent/tasks/cpp_data_analytics_expert_010_architectural_understanding_expert_01/environment/project/: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/locobench_agent/tasks/cpp_data_analytics_expert_010_architectural_understanding_expert_01/environment/project/config/: encryption_keys.conf.template  log_config.xml  main_config.json.template  pipeline_definitions.json
benchmarks/locobench_agent/tasks/cpp_data_analytics_expert_010_architectural_understanding_expert_01/environment/project/scripts/: build.sh  generate_docs.sh  package.sh  run.sh
benchmarks/locobench_agent/tasks/cpp_data_analytics_expert_010_architectural_understanding_expert_01/environment/project/src/: main.cpp
benchmarks/locobench_agent/tasks/cpp_data_analytics_expert_010_architectural_understanding_expert_01/environment/project/tests/: CMakeLists.txt  test_main.cpp
benchmarks/locobench_agent/tasks/cpp_web_dashboard_expert_039_architectural_understanding_expert_01/environment/project/: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
benchmarks/locobench_agent/tasks/cpp_web_dashboard_expert_039_architectural_understanding_expert_01/environment/project/config/: app_config.json.template  database.json.template  secrets.json.template
benchmarks/locobench_agent/tasks/cpp_web_dashboard_expert_039_architectural_understanding_expert_01/environment/project/frontend/: package.json
benchmarks/locobench_agent/tasks/cpp_web_dashboard_expert_039_architectural_understanding_expert_01/environment/project/plugins/: README.md
benchmarks/locobench_agent/tasks/cpp_web_dashboard_expert_039_architectural_understanding_expert_01/environment/project/scripts/: build.sh  run.sh  setup_dev_env.sh
benchmarks/locobench_agent/tasks/cpp_web_dashboard_expert_039_architectural_understanding_expert_01/environment/project/src/: CMakeLists.txt  main.cpp
benchmarks/locobench_agent/tasks/cpp_web_dashboard_expert_039_architectural_understanding_expert_01/environment/project/tests/: CMakeLists.txt  test_main.cpp
benchmarks/locobench_agent/tasks/python_game_engine_expert_032_cross_file_refactoring_expert_01/environment/project/: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/locobench_agent/tasks/python_game_engine_expert_032_cross_file_refactoring_expert_01/environment/project/configs/: development.json
benchmarks/locobench_agent/tasks/python_game_engine_expert_032_cross_file_refactoring_expert_01/environment/project/docs/: README.md
benchmarks/locobench_agent/tasks/python_game_engine_expert_032_cross_file_refactoring_expert_01/environment/project/rendering/: Dockerfile  main.py  requirements.txt
benchmarks/locobench_agent/tasks/python_game_engine_expert_032_cross_file_refactoring_expert_01/environment/project/tests/: __init__.py  conftest.py
benchmarks/locobench_agent/tasks/rust_blockchain_nft_expert_071_architectural_understanding_expert_01/environment/project/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
benchmarks/locobench_agent/tasks/rust_blockchain_nft_expert_071_architectural_understanding_expert_01/environment/project/config/: default.toml  development.toml  production.toml
benchmarks/locobench_agent/tasks/rust_blockchain_nft_expert_071_architectural_understanding_expert_01/environment/project/docs/: README.md  architecture.md  governance_protocol.md  nft_evolution.md  proof_of_inspiration.md  setup_guide.md
benchmarks/locobench_agent/tasks/rust_blockchain_nft_expert_071_architectural_understanding_expert_01/environment/project/scripts/: init_genesis.sh  run_all_tests.sh  start_dev_env.sh
(+80260 files in other folders)
